--- a/client_app/src/Components/css/styles.css
+++ b/client_app/src/Components/css/styles.css
@@ -2,6 +2,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 body{
-    @apply
-    bg-yellow-200
+    background-color: #394053;
 }
