--- a/client_app/src/Components/css/styles.module.css
+++ b/client_app/src/Components/css/styles.module.css
@@ -1,6 +1,7 @@
 .title{
     @apply
     text-5xl
+    text-[#d7d9d7]
     drop-shadow-lg;
     font-family: "Philosopher", sans-serif;
     font-weight: 700;
@@ -23,7 +24,8 @@
     @apply
     relative
     h-full
-    w-full;
+    w-full
+    bg-[#d7d9d7];
     font-family: "Philosopher", sans-serif;
     font-weight: 700;
 }
@@ -39,13 +41,39 @@
 .table{
     @apply
     w-full
+    pt-2
     text-xl
-    text-left 
-    rtl:text-right 
-    rounded-lg
 }
 .tr{
     @apply
-    bg-white
-    border-b
+    bg-[#d7d9d7]
+    pt-5
+}
+.td{
+    @apply
+    flex
+    flex-col
+    justify-center 
+    items-center
+    grid
+    grid-cols-12
+    pt-2
+    pb-2
+    pl-4
+    pr-4
+}
+.message
+{
+    @apply 
+    col-span-11
+}
+.a{
+    @apply
+    text-end
+}
+.svg{
+    @apply
+    pt-[0.5rem]
+    h-6
+    w-6
 }
